<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/lamp_settings_caption"
        style="android:style/textViewElementsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/lamp_settings"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/phone_settings_caption"
        style="android:style/textViewElementsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/phone_settings"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/lamp_settings_caption"
        app:layout_constraintTop_toBottomOf="@id/lightlevel" />

    <View
        android:id="@+id/showcase_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="#6A989898"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-197dp" />

    <Button
        android:id="@+id/selectColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/select_a_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lamp_settings_caption" />

    <EditText
        android:id="@+id/mode_caption"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/category"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectColor"
        app:layout_constraintVertical_bias="0.003" />

    <Spinner
        android:id="@+id/mode_spinner"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toEndOf="@id/mode_caption"
        app:layout_constraintTop_toTopOf="@id/mode_caption" />

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightlevel"
        app:layout_constraintVertical_bias="0.976" />


    <CheckBox
        android:id="@+id/before_alarm_lamp_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_caption" />

    <EditText
        android:id="@+id/before_alarm_lamp_caption1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/before_alarm1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/before_alarm_lamp_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/before_alarm_lamp_checkbox" />

    <EditText
        android:id="@+id/before_alarm_lamp_caption2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/before_alarm2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@id/before_alarm_lamp_spinner"
        app:layout_constraintTop_toTopOf="@id/before_alarm_lamp_caption1"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/before_alarm_lamp_spinner"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:ellipsize="end"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/before_alarm_lamp_caption1"
        app:layout_constraintTop_toTopOf="@id/before_alarm_lamp_caption1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/phone_repeat_caption1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/repeat"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/phone_settings_caption"
        app:layout_constraintTop_toBottomOf="@id/phone_settings_caption"
        app:layout_constraintVertical_bias="0.016" />

    <Spinner
        android:id="@+id/phone_repeat_spinner_time"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toEndOf="@id/phone_repeat_caption1"
        app:layout_constraintTop_toTopOf="@id/phone_repeat_caption1" />

    <EditText
        android:id="@+id/phone_repeat_caption2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/repeat2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/phone_repeat_caption1"
        app:layout_constraintTop_toBottomOf="@id/phone_repeat_caption1"
        app:layout_constraintVertical_bias="0.031" />

    <Spinner
        android:id="@+id/phone_repeat_spinner_max"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toEndOf="@id/phone_repeat_caption2"
        app:layout_constraintTop_toTopOf="@id/phone_repeat_caption2" />

    <EditText
        android:id="@+id/phone_repeat_caption3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/repeat3"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/phone_repeat_spinner_max"
        app:layout_constraintTop_toTopOf="@id/phone_repeat_caption2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/phone_repeat_caption4"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/repeat4"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/phone_repeat_spinner_time"
        app:layout_constraintTop_toTopOf="@id/phone_repeat_caption1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/curtains_settings_caption"
        style="android:style/textViewElementsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/curtains_settings"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/lamp_settings_caption"
        app:layout_constraintTop_toBottomOf="@id/phone_repeat_caption3" />

    <EditText
        android:id="@+id/curtains_open1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/open1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/curtains_open_check"
        app:layout_constraintTop_toBottomOf="@id/curtains_settings_caption"
        app:layout_constraintVertical_bias="0.03" />

    <Spinner
        android:id="@+id/curtains_open_spinner"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toEndOf="@id/curtains_open1"
        app:layout_constraintTop_toTopOf="@id/curtains_open1" />

    <EditText
        android:id="@+id/curtains_open2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/open2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/curtains_open_spinner"
        app:layout_constraintTop_toTopOf="@id/curtains_open_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/curtains_close1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/close1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/curtains_close_check"
        app:layout_constraintTop_toBottomOf="@id/curtains_open1"
        app:layout_constraintVertical_bias="0.082" />

    <Spinner
        android:id="@+id/curtains_close_spinner"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintStart_toEndOf="@id/curtains_close1"
        app:layout_constraintTop_toTopOf="@id/curtains_close1" />

    <EditText
        android:id="@+id/curtains_close2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/close2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/curtains_close_spinner"
        app:layout_constraintTop_toTopOf="@id/curtains_close_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/curtains_open_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/curtains_open1" />
    <CheckBox
        android:id="@+id/curtains_close_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/curtains_close1" />

    <EditText
        android:id="@+id/lightlevel_caption"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/light"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/curtains_settings_caption"
        app:layout_constraintTop_toBottomOf="@id/before_alarm_lamp_caption1"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/zero"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/curtains_settings_caption"
        app:layout_constraintTop_toBottomOf="@id/lightlevel_caption"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ellipsize="end"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text="@string/all"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="@id/lightlevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@id/lightlevel" />

    <SeekBar
        android:id="@+id/lightlevel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:max="99"
        android:min="0"
        android:progress="99"
        app:layout_constraintBottom_toBottomOf="@+id/zero"
        app:layout_constraintStart_toEndOf="@id/zero" />

</androidx.constraintlayout.widget.ConstraintLayout>